force-app/main/default/objects/SCP_Account__c/SCP_Account__c.object-meta.xml
<CustomObject>
    <label>SCP Account</label>
    <nameField>
        <label>SCP Account Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>SCP Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>