force-app/main/default/objects/SCP_Account__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Customer</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>MDG check must equal true</errorMessage>
        <filterItems>
            <field>Account.MDGCheck__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SCP Accounts</relationshipLabel>
    <relationshipName>SCP_Accounts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>