force-app/main/default/objects/SCP_Account__c/fields/Incentive__c.field-meta.xml
<CustomField>
    <fullName>Incentive__c</fullName>
    <label>Incentive</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Y</fullName>
            </value>
            <value>
                <fullName>N</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>