force-app/main/default/objects/SCP_Account__c/fields/Incentive_Review__c.field-meta.xml
<CustomField>
    <fullName>Incentive_Review__c</fullName>
    <label>Incentive Review</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>