force-app/main/default/objects/SCP_Account__c/fields/Partner__c.field-meta.xml
<CustomField>
    <fullName>Partner__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Partner</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>SCP Accounts (Partner)</relationshipLabel>
    <relationshipName>SCP_Accounts1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>