force-app/main/default/objects/SCP_Account__c/fields/SCP_Account_ID__c.field-meta.xml
<CustomField>
    <fullName>SCP_Account_ID__c</fullName>
    <label>SCP Account ID</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>