force-app/main/default/objects/SCP_Account__c/fields/SDS_AM__c.field-meta.xml
<CustomField>
    <fullName>SDS_AM__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>SDS AM</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>SCP Accounts</relationshipLabel>
    <relationshipName>SCP_Accounts</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>