force-app/main/default/objects/SCP_Account__c/fields/SDS_PDM__c.field-meta.xml
<CustomField>
    <fullName>SDS_PDM__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>SDS PDM</label>
    <referenceTo>Employee__c</referenceTo>
    <relationshipLabel>SCP Accounts (SDS PDM)</relationshipLabel>
    <relationshipName>SCP_Accounts1</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>