force-app/main/default/objects/SCP_Account__c/fields/WBS_Code__c.field-meta.xml
<CustomField>
    <fullName>WBS_Code__c</fullName>
    <label>WBS Code</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>