force-app/main/default/objects/SCP_Account__c/recordTypes/SCP_Project_Approved.recordType-meta.xml
<RecordType>
    <fullName>SCP_Project_Approved</fullName>
    <active>true</active>
    <label>SCP Project Approved</label>
</RecordType>