force-app/main/default/objects/SCP_Account__c/validationRules/SCP_Account_ID_Prefix_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>SCP_Account_ID_Prefix_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(SCP_Account_ID__c, &quot;^ACCOUNT-+[a-zA-Z0-9_]*$&quot;))</errorConditionFormula>
    <errorDisplayField>SCP_Account_ID__c</errorDisplayField>
    <errorMessage>SCP Account ID must begin with ACCOUNT-</errorMessage>
</ValidationRule>