force-app/main/default/objects/SCP_Account__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Partner__c</columns>
    <columns>SCP_Account_ID__c</columns>
    <columns>NAME</columns>
    <columns>Customer__c</columns>
    <columns>Contract_Start_Date__c</columns>
    <columns>SDS_AM__c</columns>
    <columns>SDS_PDM__c</columns>
    <columns>Incentive__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>